refatoring: Mudei o comportamento do código e introduzi a funcionalidade de salvar de forma correta e funcional